# music-downloader

./: .gitignore  README.md  TODO  main.py  pyproject.toml  requirements.txt  structure.md
core/: config.py  downloader.py
music_downloader/: config.py  downloader.py  file_manager.py  logger.py  utils.py
tests/: test_downloader.py  test_utils.py
ui/: app.py  widgets.py
utils/: file_handler.py
